personalized the app

--- a/client/welcome.html
+++ b/client/welcome.html
@@ -1,19 +1,62 @@
 <template name="welcome">
+
+	<div>
+		<ul>
+			<li>ichi</li>
+			<li>ni</li>
+			<li>san</li>
+		</ul>
+
+			<a href="http://www.brandeis.edu" > My University </a>
+
+			<table class ="table">
+				<thead>
+					<tr>
+						<th>English</th><th>Spanish</th><th>Japanese</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>one</td> <td>uno</td> <td>ichi</td>
+					</tr>
+					<tr>
+						<td>two</td>
+					</tr>
+				</tbody>
+				
+			</table>
+	</div>
 	
 	<div class="row">
-		<div class="col-md-6 bg-info">
+		<div class="col-md-3 col-md-offset-2 bg-info">
 			<h1>Build Web and Mobile Apps!</h1>
 			<p> BMAD combines app design coursework with field trips and social activities to create an exciting and transformative summer experience. You'll have the chance to meet professional app developers and learn which part of the industry might be right for you!</p>
 			<img src="images/nuance.jpg" width="100%" alt="Volen Center"/>
 		</div>
-		
-		<div class="col-md-6 bg-warning">
+		<div class="col-md-3 col-md-offset-2 bg-warning">
 			<h1>Express your Creativity!</h1>
 			<p> We’ll give you the tools to design a variety of apps, including social media, lifestyle, entertainment, productivity, educational, and apps straight from your imagination that can be shared with family, friends, and fans the world over!</p>
-			<img src="images/tshirt.jpg" width="100%" alt="the Vertica Lounge"/>
-			
+			<img src="images/tshirt.jpg" width="100%" alt="the Vertica Lounge"/>		
 		</div>
-		
 	</div>
+
+	<!--     This is a comment...Let's create another row with 3
+	columns and a heading and paragraph and imaage in each
+    -->
+
+    <div class="row">
+    	<div class="col-md-4 col-md-offset-2 bg-warning">
+    		<h1>New row</h1>
+    		<p>This is a new row. Here's another picture of the t-shirt</p>
+    		<img src="images/tshirt.jpg" width="100%"/>
+    	</div>
+    </div>
+    	
+    <div class="row">
+    	<div class="col-md-4 col-md-offset-2 bg-warning">
+    		<h1>Another row</h1>
+    		<p>This is a new row. Here's another picture of the t-shirt</p>
+    	</div>
+    </div>
 
 </template>
