--- a/client/chat.html
+++ b/client/chat.html
@@ -1,3 +1,28 @@
 <template name="chat">
 	<h1>Chat</h1>
+
+	<hr/>
+
+	<table class="table table-striped table-condensed table-hover">
+		<thead>
+			<tr>
+				<th>Timestamp</th>
+				<th>User</th>
+				<th>Message</th>
+			</tr>
+		</thead>
+		<tbody>
+			{{> chats}}
+		</tbody>
+	</table>
+</template>
+
+<template name="chats">
+	{{#each chatData}}
+	<tr>
+		<td>{{createdAt}}</td>
+		<td>{{username}}</td>
+		<td>{{message}}</td>
+	</tr>
+	{{/each}}
 </template>
