--- a/client/chat/chat.html
+++ b/client/chat/chat.html
@@ -1,32 +1,33 @@
 
 <template name="chat">
 <h1>Chat</h1>
-<!-- <a href="{{pathFor 'ipform'}}">Create or Edit your ip address</a>
-<hr/>
+
+
 <table class="table table-hover">
 	<thead>
-		<tr><th>Name</th><th>Link to local server</th></tr>
+		<tr><th>User</th><th>Time</th><th>Message</th></tr>
 	</thead>
 	<tbody>
-		{{#each ips}}
-			{{> iprow}}
+		{{#each users}}
+			{{> userrow}}
 		{{/each}}
 	</tbody>
 </table>
 
-<hr/>
--->
+<form id="createtextform">
+			message: <input type="text" name="message"><br/>
+
+			<input type="submit">
+</form>
+
+</template>
+
+<template name = "userrow">
+	<tr>
+		<td>{{user}}</td>
+		<td>{{time}}</td>
+		<td>{{text}}</td>
+	</tr>
 </template>
 
 
-<!-- <template name="iprow">
-	<tr>
-		<td>{{name}}</td>
-		<td><a href="http://{{ip}}:3000">{{ip}}</a></td>
-		<td>
-			{{#if ismyrow}} 
-			<span class="glyphicon glyphicon-remove jbsapp-delete-icon" aria-hidden="true"></span>
-			{{/if}}
-		</td>
-	</tr>
-</template>  -->
