--- a/client/chat.html
+++ b/client/chat.html
@@ -13,6 +13,16 @@
 		</thead>
 		<tbody>
 			{{> chats}}
+			<tr>
+				<td colspan="3">
+					<form id="chatform" class="form-horizontal">
+						<span class="col-sm-10">
+							<input type="text" name="chatbox" placeholder="Type here" class="form-control"/>
+						</span>
+						<input type="submit" class="btn btn-default col-sm-2"/>
+					</form>
+				</td>
+			</tr>
 		</tbody>
 	</table>
 </template>
