--- a/client/chat.html
+++ b/client/chat.html
@@ -12,17 +12,21 @@
 			</tr>
 		</thead>
 		<tbody>
-			{{> chats}}
-			<tr>
-				<td colspan="3">
-					<form id="chatform" class="form-horizontal">
-						<span class="col-sm-10">
-							<input type="text" name="chatbox" placeholder="Type here" class="form-control"/>
-						</span>
-						<input type="submit" class="btn btn-default col-sm-2"/>
-					</form>
-				</td>
-			</tr>
+			{{#if currentUser}}
+				{{> chats}}
+				<tr>
+					<td colspan="3">
+						<form id="chatform" class="form-horizontal">
+							<span class="col-sm-10">
+								<input type="text" name="chatbox" placeholder="Type here" class="form-control"/>
+							</span>
+							<input type="submit" class="btn btn-default col-sm-2"/>
+						</form>
+					</td>
+				</tr>
+			{{else}}
+				<tr colspan="3"><td>Please log in!</td></tr>
+			{{/if}}
 		</tbody>
 	</table>
 </template>
