--- a/client/chat.html
+++ b/client/chat.html
@@ -1,6 +1,16 @@
 <template name= "chat">
 
+{{#if currentUser}}
+
 <h1>Let's Chat!</h1>
+
+
+<h5>Enter your message here:</h5>
+	<form id="createmessage">
+			message: <input type="text" name="message"><br/>
+			<input type="submit">
+	</form>
+
 
 <ul>Here are the most recent 10 chats</ul>
 <table class="table table-condensed">
@@ -16,10 +26,14 @@
 	</tbody>
 </table>
 
+{{else}}
+		<h2>You must be logged in to see the user profiles</h2>
+{{/if}}
+
 </template>
 
 <template name="chatrow">
 	<tr>
-		<td>{{username}}: {{time}} {{message}}</td>
+		<td>{{username}}</td> <td>{{time}}</td> <td>{{message}}</td>
 	</tr>
 </template>
