--- a/client/chatroom.html
+++ b/client/chatroom.html
@@ -1,4 +1,9 @@
-<template name= "chatroom">
+<template name="chatroom">
 
+	
+	<form id= "addmessage">
+		message: <input type= "text"  name= "message"><br/>
+		<input type="submit">
+	</form>	
 	
 </template>
