--- a/client/welcome.html
+++ b/client/welcome.html
@@ -1,22 +1,30 @@
 <template name="welcome">
-
-	
-	
-	<div class="row">
-		<div class="col-md-3 col-md-offset-2 col-xs-6 bg-info">
-					
-			<h1>Build Web and Mobile Apps!</h1>
-			<p> BMAD combines app design coursework with field trips and social activities to create an exciting and transformative summer experience. You'll have the chance to meet professional app developers and learn which part of the industry might be right for you!</p>
-			<img src="images/nuance.jpg" width="100%" alt="Volen Center"/>
+<h1>Bookrack <small>BETA</small></h1>
+	<div class="row bg-info">
+		<div class="col-xs-8 bg-info">		
+			<p></p>
 		</div>
 		
-		<div class="col-md-3 col-md-offset-2 col-xs-6 bg-warning">
-			<h1>Express your Creativity!</h1>
-			<p> We’ll give you the tools to design a variety of apps, including social media, lifestyle, entertainment, productivity, educational, and apps straight from your imagination that can be shared with family, friends, and fans the world over!</p>
-			<img src="images/tshirt.jpg" width="100%" alt="the Vertica Lounge"/>
+		<div class="col-xs-4 bg-primary">
+			<h2>Bookrack</h2>
+			<p>There&rsquo;s so many books in the world to read. Let us help you catalog them here.</p>
 			
 		</div>
 		
+	</div>
+
+	<div class="row">
+		<div class="col-md-4 bg-warning">
+			<h3>Shelves you might like</h3>
+		</div>
+
+		<div class="col-md-4 bg-success">
+			<h3>Recommended reading</h3>
+		</div>
+
+		<div class="col-md-4 bg-danger">
+			<h3>Quote of the day</h3>
+		</div>
 	</div>
 
 	<!--      This is a comment ... Lets create another row with 3 columns
