--- a/client/about.html
+++ b/client/about.html
@@ -1,27 +1,7 @@
 <template name="about">
 <h1>About</h1>
 
-I made this page!! {{theTime}}
-<hr/>
-
-Here is our team:
-<table class="table table-condensed">
-	<thead>
-		<tr><th>Name</th><th>Email</th></tr>
-	</thead>
-	<tbody>
-{{#each team}}
-  {{> teamrow}}
-{{/each}}
-	</tbody>
-</table>
-
-</template>
+Bookrack was cobbled together by Jessica Huynh using HTML5, CSS3, Bootstrap, and the Meteor framework for JavaScript. It is designed to be an easy way to categorize and sort your books, without any additional cruft.
 
 
-<template name="teamrow">
-   <tr>
-   	  <td>{{name}}</td>
-   	  <td>{{email}}</td>
-   </tr>
 </template>
