--- a/client/people/people.html
+++ b/client/people/people.html
@@ -1,6 +1,6 @@
 <template name="people">
 <div id="people">
-	<h1>The Summer 2015 CS JBS Community</h1>
+	<h1>Bookrackers</h1>
 	{{#if currentUser}}
 		<table class="table table-striped table-bordered">
 			<thead>
@@ -16,7 +16,7 @@
 			</tbody>
 		</table>
 	{{else}}
-		<h2>You must be logged in to see the user profiles</h2>
+		<h2>Join us!</h2>
 	{{/if}}
 	
 
