--- a/client/people/profileEdit.html
+++ b/client/people/profileEdit.html
@@ -55,7 +55,7 @@
           </div>
 		  
           <div class="form-group">
-            <label class="col-lg-3 control-label">UserName:</label>
+            <label class="col-lg-3 control-label">Username:</label>
             <div class="col-lg-8">
               <input class="form-control" type="text" name="userName" id="userName" value="{{profile.userName}}">
             </div>
