--- a/client/about.html
+++ b/client/about.html
@@ -1,5 +1,8 @@
 <template name="about">
-<h1>About</h1>
+
+<div class="bg-primary">
+	<h1>About Us!</h1>
+</div>
 
 I made this page!! {{theTime}}
 <hr/>
