--- a/client/sponsors.html
+++ b/client/sponsors.html
@@ -1,6 +1,8 @@
 <template name="sponsors">
 
-	<h1>We wish we had these sponsors!</h1>
+<div class="bg-primary">
+<h1>We wish we had these sponsors!</h1>
+</div>
 	{{#each sponsorData}}
 		<hr/>
 		{{name}}: {{amt}} 
