--- a/client/welcome.html
+++ b/client/welcome.html
@@ -1,27 +1,68 @@
 <template name="welcome">
 
+	<div class="bg-primary">
+		<h1>World For Anime Fans!</h1>
+	</div>
+	
+	<blockquote>
+	<h3>Latest Updates:</h3>
+	</blockquote>
 	
 	
 	<div class="row">
-		<div class="col-md-3 col-md-offset-2 col-xs-6 bg-info">
+		<div class="col-md-4 col-xs-6  bg-warning">
 					
-			<h1>Build Web and Mobile Apps!</h1>
-			<p> BMAD combines app design coursework with field trips and social activities to create an exciting and transformative summer experience. You'll have the chance to meet professional app developers and learn which part of the industry might be right for you!</p>
-			<img src="images/nuance.jpg" width="100%" alt="Volen Center"/>
+			<h2>Shokugeki no Soma</h2>
+			<h4>『食戟のソーマ』Ep. 10</h4>
+			<p class="text-justify">In a small shopping district in Japan lies a small special-of-the-day restaurant, Restaurant Yukihira. It is here we meet Sōma Yukihira, the young son of the restaurant's owner, Jōichirō Yukihira, who trained him in his own original cooking style, the Yukihira Style. Sōma strives to surpass his father one day in cooking. However, by the beginning of the story, he has lost to him 489 times. Just before Sōma starts his high school years, Jōichirō makes a surprising announcement. He decides to close down Restaurant Yukihira for three years so he could work abroad and recommends that Sōma attend Tōtsuki Culinary Academy to further hone his skills. Upon arrival at the academy, Sōma learns that Tōtsuki is no ordinary school as the school has a graduation rate of less than 1%.</p>
+			<img src="images/shiji.jpg" width="100%" alt="shiji" class="img-circle">
 		</div>
 		
-		<div class="col-md-3 col-md-offset-2 col-xs-6 bg-warning">
-			<h1>Express your Creativity!</h1>
-			<p> We’ll give you the tools to design a variety of apps, including social media, lifestyle, entertainment, productivity, educational, and apps straight from your imagination that can be shared with family, friends, and fans the world over!</p>
-			<img src="images/tshirt.jpg" width="100%" alt="the Vertica Lounge"/>
+		<div class="col-md-4 col-xs-6 bg-danger">
+			<h2>Kekkai Sensen</h2>
+			<h4>『血界戦線』Ep. 10</h4>
+			<p class="text-justify">Three years ago, a gateway between Earth and the Beyond opened over the city of New York. In one terrible night, New York was destroyed and rebuilt, trapping New Yorkers and extradimentional creatures alike in an impenetrable bubble. Now, New York has been rechristened New Jerusalem, a paranormal melting pot where magic and madness dwell alongside the mundane, where every form of human vermin gathers to exploit otherwordly assets for earthly profit. Now someone is threatening to breach the bubble and release New Jerusalem’s horrors, but the mysterious superagents of Libra fight to prevent the unthinkable.</p>
+			<img src="images/huanjie.jpg" width="100%" alt="Huanjie" class="img-circle">
 			
+		</div>
+
+		<div class="col-md-4 col-xs-6 bg-warning">
+			<h2>JoJo's Bizarre Adv.</h2>
+			<h4>『ジョジョの奇妙な冒険』Ep. 10</h4>
+			<p class="text-justify">The main protagonist is a 17 year old Japanese punk named Jotaro Kujo (Or Kujo Jotaro...the 2 "jo"s line up to make Jojo), whose mother falls ill under a curse and will die if the curse is not lifted. Jotaro and friends travel by land, sea and air from Tokyo, Japan to Cairo, Egypt where the source of the curse is. They pass through several locations including Hong Kong, India, Pakistan and Saudi Arabia, getting a larger group of people as they go along. When the protagonists finally meet up with the main antagonist, the final battle is one of the most intense fights in anything ever. Perhaps less ridiculous than the final battle of Part 2, but definitely more intense and engaging.</p>
+			<img src="images/jojo.jpg" width="100%" alt="jojo" class="img-circle">
 		</div>
 		
 	</div>
 
-	<!--      This is a comment ... Lets create another row with 3 columns
-	    and a heading and paragraph and image in each
-	 -->
+	<blockquote>
+	<h3>Recommendations:</h3>
+	</blockquote>
 
+	<div class="row">
+		<div class="col-md-4 col-xs-6 bg-info">
+					
+			<h2>Kimi ni Todoke</h2>
+			<h4>『君に届け』</h4>
+			<p class="text-justify">Sawako Kuronuma - dubbed Sadako by her classmates for her resemblance to the character from The Ring - has always been feared and misunderstood because of her appearance; rumors around school report that she can see ghosts and curse people. However, despite her ominous appearance, she is actually a sweet and timid girl who only longs to be able to make friends and be liked by everyone else. When her idol, the popular boy Kazehaya, begins talking with her, everything changes. She finds herself in a new world, making new friends and talking to different people, and she can't thank Kazehaya enough for giving her these opportunities. Slowly, but surely, a sweet love blossoms between the two as they overcome circumstances and obstacles that stand in their way.</p>
+			<img src="images/gaosu.jpg" width="100%" alt="gaosu" class="img-circle">
+		</div>
+		
+		<div class="col-md-4 col-xs-6 bg-warning">
+			<h2>Black Butler</h2>
+			<h4>『黑執事』</h4>
+			<p class="text-justify">In Victorian-era London lives the young boy, Ciel Phantomhive. On the night of his tenth birthday, a fire engulfed his manor house, his parents were murdered, and he was captured by a mysterious organization. After a month of enduring excruciating and humiliating torture, Ciel returns to the Phantomhive household with an enigmatic black-clad butler, Sebastian Michaelis. To others, it seems that the butler is simply the best at his craft, from anticipating his young master's needs to carrying them out to the best of his inexplicable abilities. However, little do they know, Sebstian is actually a demon that has entered into a contract with Ciel, promising to help the boy achieve revenge on those who have wronged him in exchange for his soul.</p>
+			<img src="images/heishi.jpg" width="100%" alt="zhishi" class="img-circle" >
+			
+		</div>
+
+		<div class="col-md-4 col-xs-6 bg-info">
+			<h2>Sword Art Online</h2>
+			<h4>『刀劍神域』</h4>
+			<p class="text-justify">Sword Art Online (SAO) is a Virtual Reality Massively Multiplayer Online Role-Playing Game (VRMMORPG), released in 2022. With the Nerve Gear, a virtual reality helmet that stimulates the user's five senses via their brain, players can experience and control their in-game characters with their minds. On November 6, 2022, the players log into SAO for the first time, and later discover that they are unable to log out. They are then informed by Akihiko Kayaba, SAO's creator, that if they wish to be free, they must reach the 100th floor of the game's tower and defeat the final boss. However, if their avatars die in-game, their bodies will also die in the real world.</p>
+			<img src="images/daojian.jpg" width="100%" alt="daojian" class="img-circle">
+		</div>
+		
+	</div>
 
 </template>
