--- a/client/display.html
+++ b/client/display.html
@@ -21,7 +21,7 @@
 </table>
 
 {{else}}
-		<h2>You must be logged in to see the user profiles</h2>
+		<h2>You must be logged in to see the messages!</h2>
 {{/if}}
 </template>
 
