--- a/client/chat.html
+++ b/client/chat.html
@@ -19,7 +19,7 @@
 	</form>
 
 {{else}}
-		<h2>You must be logged in to see the user profiles</h2>
+		<h2>You must be logged in to chat!</h2>
 {{/if}}
 
 </template>
