edit book function, nicer homepage

--- a/client/books/book.html
+++ b/client/books/book.html
@@ -4,4 +4,6 @@
 	<td>{{shelf}}</td>
 	<td>{{isbn}}</td>
 	<td>{{tags}}</td>
+	<td>{{status}}</td>
+	<td><a class="edit-btn btn btn-warning">Edit</a></td>
 </template>
