link to personal profile page in nav bar, some minor tweaks

--- a/client/books/allbooks.html
+++ b/client/books/allbooks.html
@@ -6,7 +6,7 @@
 		<!--<li role="presentation"><a href="#" id="title">Title</a></li>-->
 	</ul>
 </div>
-<table class="table" id="booksTable">
+<table class="table table-hover table-striped" id="booksTable">
 	<thead>
 		<tr>
 			<th>Title</th>
@@ -15,7 +15,6 @@
 			<th>ISBN</th>
 			<th>Tags</th>
 			<th>Status</th>
-			<th>&nbsp;</th>
 		</tr>
 	</thead>
 	<tbody>
