--- a/client/books/mybooks.html
+++ b/client/books/mybooks.html
@@ -47,7 +47,7 @@
 			</div>
 			<div class="form-group">
 				<div class="col-sm-offset-2 col-sm-10">
-					<button type="submit" class="btn btn-default">Add</button>
+					<button type="submit" class="btn btn-danger">Add</button>
 				</div>
 			</div>
 			<hr />
@@ -55,7 +55,7 @@
 	</div>
 </div>
 
-<table class="table">
+<table class="table table-hover table-striped">
 	<thead>
 		<tr>
 			<th>Title</th>
