--- a/client/people/profileEdit.html
+++ b/client/people/profileEdit.html
@@ -70,7 +70,7 @@
 		  
           <div class="form-group">
             <div class="col-lg-8">
-				<input class="form-control" type="submit" id="profileEditSubmit" />
+				<input class="form-control btn btn-success" type="submit" id="profileEditSubmit" />
             </div>
           </div>
 		 
