--- a/client/welcome.html
+++ b/client/welcome.html
@@ -45,6 +45,7 @@
 				<li><em>{{title}}</em> by {{author}}</li>
 				{{/each}}
 			</ul>
+			<p>Try adding your own!</p>
 		</div>
 
 		<div class="col-md-4 bg-warning">
