--- a/client/welcome.html
+++ b/client/welcome.html
@@ -1,2 +1,61 @@
-<Template>
+<Template name = "welcome">
+<br><br><br><br>
+<h1>Welcome to Anywhere Education</h1>
+
+<div cladss = "container-fluid">
+	<div class = "row">
+		<div class = "col-md-11 col-xs-11 col-xs-offset-1">
+			<div class = "row">
+				<h3> Introduction </h3>
+				<div class = "col-md-11 col-xs-11 bg-info">
+					<br>
+					<p>    We are dedicated to assist Chinese students who want to apply for colleges in U.S. Now, many Chinese students are considering apply for colleges aboard, but they are confused about the application process and are misled by many information online. Many of them are unable to visit the colleges in U.S before they make their final decision. We hope these students will be able to gain information about each college as accurate as American students. We want to pair them with current college students in U.S., so they can hear about their experience and learn more about these colleges. </p>
+					
+					<br>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+	<div class = "row">
+		<div class = "col-md-11 col-xs-11 col-xs-offset-1">
+			<div class = "row">
+				<h3> News </h3>
+				<div class = "col-md-5 col-xs-11 bg-success">
+					<br>
+					<li><h4><bold>The 20 Colleges With The Best Food In U.S.</bold></h4></li>
+					<p>Bowdoin College — which traditionally sees its graduating seniors off with a lobster bake — has the best food of any college in the country, according to the Daily Meal.</p>
+					<a href="http://www.businessinsider.com/20-colleges-with-the-best-food-in-the-country-2013-9?op=1">Read more</a>
+					<img src="images/bowdoin-college-food.png" width="100%" alt="best food"/>
+					<br>
+				</div>
+
+				<div class = "col-md-5 col-xs-11 col-md-offset-1 bg-success">
+					<br>
+					<bold><li><h4>10 College Dorms With Awesome Amenities</h4></li></bold>
+					<p>Cramped spaces, cinderblock walls, and low-grade lighting are the things first-year college students expect from their housing experiences. You won't find any of that in the dorms on this list, however.</p>
+					<a href="http://www.businessinsider.com/10-college-dorms-with-awesome-amenities-2013-10?op=1#ixzz3copMPezH">Read more</a>
+					<img src="images/boston-university-dorms.jpg" width="100%" alt="best dorm"/>
+					<br>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class = "row">
+		<div class = "col-md-11 col-xs-11 col-xs-offset-1">
+			<div class = "row">
+				<h3>Hiring</h3>
+				<div class = "col-md-11 col-xs-11 bg-warning">
+					<br>
+					<p> We are now hiring college students in U.S. English has to be their native language and can contribute about 4 - 5 hours per week. For more infomatio, please us email with your college email address to <a href="#">hiring@anywhere-edu.com</a></p>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+	
+</Template>
 
