--- a/client/welcome.html
+++ b/client/welcome.html
@@ -3,25 +3,55 @@
 	
 	
 	<div class="row">
-		<div class="col-md-3 col-md-offset-2 col-xs-6 bg-info">
+		<div class="col-md-3 col-md-offset-1 col-xs-6 bg-warning">
 					
-			<h1>Build Web and Mobile Apps!</h1>
-			<p> BMAD combines app design coursework with field trips and social activities to create an exciting and transformative summer experience. You'll have the chance to meet professional app developers and learn which part of the industry might be right for you!</p>
-			<img src="images/nuance.jpg" width="100%" alt="Volen Center"/>
+			<h1>Brandeis University</h1>
+			<p> Brandeis University is an American private research university with a liberal arts focus. It is located in Waltham, Massachusetts, 9 miles west of Boston. The university has an enrollment of approximately 3,600 undergraduate and 2,200 graduate students. It was tied for 32nd among national universities 	in U.S. News & World Report 's 2014 rankings.</p>
+			<img src="images/brandeisMap.png" width="100%" alt="campusMap"/>
 		</div>
 		
-		<div class="col-md-3 col-md-offset-2 col-xs-6 bg-warning">
-			<h1>Express your Creativity!</h1>
-			<p> We’ll give you the tools to design a variety of apps, including social media, lifestyle, entertainment, productivity, educational, and apps straight from your imagination that can be shared with family, friends, and fans the world over!</p>
-			<img src="images/tshirt.jpg" width="100%" alt="the Vertica Lounge"/>
+		<div class="col-md-3 col-md-offset-1 col-xs-6 bg-info">
+					
+			<h1>Volen Center</h1>
+			<p> The Volen National Center for Complex Systems was formed for the purpose of studying the brain and intelligence. The Center is composed of faculty members who specialize in artificial intelligence, cognitive science, and a wide range of topics in neuroscience including experimental psychology, computational neuroscience, and cellular and molecular neurobiology.</p>
+			<img src="images/volen.jpg" width="100%" alt="Volen Center"/>
+		</div>
+		
+		<div class="col-md-3 col-md-offset-1 col-xs-6 bg-warning">
+			<h1>Vertica Lounge</h1>
+			<p> In 2005, Professor Mitch Cherniack co-founded a company, Vertica, with colleagues from MIT and Brown to commercialize a column-based Database technology called C-store, and the company gifted a number of stock shares to the University. Vertica grew to be a leader in “Big Data” and in 2011, Hewlett Packard acquired Vertica, which turned the stock into an actual gift.</p>
+			<img src="images/vertica.jpg" width="100%" alt="the Vertica Lounge"/>
 			
 		</div>
-		
+
 	</div>
 
 	<!--      This is a comment ... Lets create another row with 3 columns
 	    and a heading and paragraph and image in each
 	 -->
 
+	<div class="row2">
+		<div class="col-md-3 col-md-offset-1 col-xs-6 bg-info">
+			<h1>Professor Tim Hickey</h1>
+			<p> Timothy Hickey is a Professor of Computer Science whose current work focuses on educational technology and game-based learning. He is a professor of Computer Science. His expertises include Educational Technology, Computer Science Education, 3D Game Design, Interval Arithmetic, Scientific Visualization, Computer Supported Learning, Groupware and Collaborative Editing, Constraint Logic Programming. </p>
+			<img src="images/hickey-apr08.gif" width="100%" alt="timHickey"/>
+			
+		</div>
+
+		<div class="col-md-3 col-md-offset-1 col-xs-6 bg-warning">
+			<h1>Express your Creativity!</h1>
+			<p> We’ll give you the tools to design a variety of apps, including social media, lifestyle, entertainment, productivity, educational, and apps straight from your imagination that can be shared with family, friends, and fans the world over!</p>
+			<img src="images/tshirt.jpg" width="100%" alt="tshirt"/>
+			
+		</div>
+
+		<div class="col-md-3 col-md-offset-1 col-xs-6 bg-info">
+			<h1>See our class</h1>
+			<p> We’ll give you the tools to design a variety of apps, including social media, lifestyle, entertainment, productivity, educational, and apps straight from your imagination that can be shared with family, friends, and fans the world over!</p>
+			<img src="images/nuance.jpg" width="100%" alt="nuance"/>
+			
+		</div>
+		
+	</div>
 
 </template>
