--- a/client/about.html
+++ b/client/about.html
@@ -1,27 +1,6 @@
 <template name="about">
-<h1>About</h1>
+<h1>about</h1>
 
-I made this page!! {{theTime}}
+PA1 for the 2015 Voice/Web/Mobile Apps JBS
 <hr/>
-
-Here is our team:
-<table class="table table-condensed">
-	<thead>
-		<tr><th>Name</th><th>Email</th></tr>
-	</thead>
-	<tbody>
-{{#each team}}
-  {{> teamrow}}
-{{/each}}
-	</tbody>
-</table>
-
-</template>
-
-
-<template name="teamrow">
-   <tr>
-   	  <td>{{name}}</td>
-   	  <td>{{email}}</td>
-   </tr>
 </template>
