--- a/client/welcome.html
+++ b/client/welcome.html
@@ -1,27 +1,29 @@
 <template name="welcome">
 
-	
-	
-	<div class="row">
-		<div class="col-md-3 col-md-offset-2 col-xs-6 bg-info">
-					
-			<h1>Build Web and Mobile Apps!</h1>
-			<p> BMAD combines app design coursework with field trips and social activities to create an exciting and transformative summer experience. You'll have the chance to meet professional app developers and learn which part of the industry might be right for you!</p>
-			<img src="images/nuance.jpg" width="100%" alt="Volen Center"/>
+	<div class="container-fluid">
+
+		<div class="row-fluid">	
+			<!-- col for most recently inputted album -->
+			<div class="col-md-3 col-xs-12 bg-info">					
+				<h1>most recent album</h1>
+				<p> this should probably contain time submitted and by whom, artist, and genre </p>
+			</div>	
 		</div>
 		
-		<div class="col-md-3 col-md-offset-2 col-xs-6 bg-warning">
-			<h1>Express your Creativity!</h1>
-			<p> We’ll give you the tools to design a variety of apps, including social media, lifestyle, entertainment, productivity, educational, and apps straight from your imagination that can be shared with family, friends, and fans the world over!</p>
-			<img src="images/tshirt.jpg" width="100%" alt="the Vertica Lounge"/>
-			
+		<div class="row-fluid">
+			<!-- col for highest rated album -->
+			<div class="col-md-3 col-md-offset-1 col-xs-12 bg-warning">
+				<h1>highest rated album</h1>
+				<p> same info as recent albums but also has rating</p>			
+			</div>			
 		</div>
-		
+
+		<div class="row-fluid">
+			<div class="col-md-4 col-md-offset-1 col-xs-12 bg-info">
+				<h1>recent reviews</h1>
+				<p>same functionality as chat function i guess?</p>
+			</div>
+		</div>
+
 	</div>
-
-	<!--      This is a comment ... Lets create another row with 3 columns
-	    and a heading and paragraph and image in each
-	 -->
-
-
 </template>
