--- a/client/incidents.html
+++ b/client/incidents.html
@@ -11,7 +11,7 @@
 
 		<table class= "table table-condensed spacing">
 			<thead>
-				<th>June 8th 2015 Incident #2, Progress?  </th>
+				<th>June 8th 2015 Incident #2, Progress???  </th>
 			</thead>
 			<tbody>
 				{{#each messages}}
