--- a/client/welcome.html
+++ b/client/welcome.html
@@ -13,14 +13,14 @@
 		<div class="col-md-4 col-xs-6  bg-warning">
 					
 			<h2>Shokugeki no Soma</h2>
-			<h4>『食戟のソーマ』Ep. 10</h4>
+			<a href="https://www.youtube.com/watch?v=1_xjJYisd1k" ><h4>『食戟のソーマ』Ep. 10</h4> </a>
 			<p class="text-justify">In a small shopping district in Japan lies a small special-of-the-day restaurant, Restaurant Yukihira. It is here we meet Sōma Yukihira, the young son of the restaurant's owner, Jōichirō Yukihira, who trained him in his own original cooking style, the Yukihira Style. Sōma strives to surpass his father one day in cooking. However, by the beginning of the story, he has lost to him 489 times. Just before Sōma starts his high school years, Jōichirō makes a surprising announcement. He decides to close down Restaurant Yukihira for three years so he could work abroad and recommends that Sōma attend Tōtsuki Culinary Academy to further hone his skills. Upon arrival at the academy, Sōma learns that Tōtsuki is no ordinary school as the school has a graduation rate of less than 1%.</p>
 			<img src="images/shiji.jpg" width="100%" alt="shiji" class="img-circle">
 		</div>
 		
 		<div class="col-md-4 col-xs-6 bg-danger">
 			<h2>Kekkai Sensen</h2>
-			<h4>『血界戦線』Ep. 10</h4>
+			<a href="https://www.youtube.com/watch?v=8v3Nl5sYx6E"><h4>『血界戦線』Ep. 10</h4></a>
 			<p class="text-justify">Three years ago, a gateway between Earth and the Beyond opened over the city of New York. In one terrible night, New York was destroyed and rebuilt, trapping New Yorkers and extradimentional creatures alike in an impenetrable bubble. Now, New York has been rechristened New Jerusalem, a paranormal melting pot where magic and madness dwell alongside the mundane, where every form of human vermin gathers to exploit otherwordly assets for earthly profit. Now someone is threatening to breach the bubble and release New Jerusalem’s horrors, but the mysterious superagents of Libra fight to prevent the unthinkable.</p>
 			<img src="images/huanjie.jpg" width="100%" alt="Huanjie" class="img-circle">
 			
@@ -28,7 +28,7 @@
 
 		<div class="col-md-4 col-xs-6 bg-warning">
 			<h2>JoJo's Bizarre Adv.</h2>
-			<h4>『ジョジョの奇妙な冒険』Ep. 10</h4>
+			<a href="https://www.youtube.com/watch?v=LMzRdYVppCw"><h4>『ジョジョの奇妙な冒険』Ep. 10</h4></a>
 			<p class="text-justify">The main protagonist is a 17 year old Japanese punk named Jotaro Kujo (Or Kujo Jotaro...the 2 "jo"s line up to make Jojo), whose mother falls ill under a curse and will die if the curse is not lifted. Jotaro and friends travel by land, sea and air from Tokyo, Japan to Cairo, Egypt where the source of the curse is. They pass through several locations including Hong Kong, India, Pakistan and Saudi Arabia, getting a larger group of people as they go along. When the protagonists finally meet up with the main antagonist, the final battle is one of the most intense fights in anything ever. Perhaps less ridiculous than the final battle of Part 2, but definitely more intense and engaging.</p>
 			<img src="images/jojo.jpg" width="100%" alt="jojo" class="img-circle">
 		</div>
