--- a/client/college/mycollege.html
+++ b/client/college/mycollege.html
@@ -1,11 +1,37 @@
-<!-- <Template name = "mycollege">
+<template name = "mycollege">
 <br><br><br><br>
 <h1>My College List</h1>
 
-	{{if currentUser}}
-		<form>
-			<input type="text" name = "collegeserach">
-			<input type="submit">
-		</form>
-	{{/if}}
-</Template> -->
+<form class="form-inline" id="createlist">
+        <label class="col-md-1 col-sm-11 control-label" for="Message" ><strong><h4>Search:</h4></strong></label>
+        <div class="col-md-9 col-sm-11">
+            {{#if currentUser}}
+				<textarea name="text" class="form-control" rows="1" id="CollegeSearch">{{message}}</textarea>
+				<button type="submit" class="btn btn-default">Search</button>
+			{{else}}
+				<textarea name="text" class="form-control" rows="1" id="CollegeSearch" placeholder="Please Log In First..." disabled>{{message}}</textarea>
+				<button type="submit" class="btn btn-default">Search</button>
+			{{/if}}
+        </div>
+</form>
+
+<table class="table table-hover">
+	<thead>
+		<tr><th>User</th><th>Time</th><th>Message</th></tr>
+	</thead>
+	<tbody>
+		{{#each mylist}}
+			{{> mycollegerow}}
+		{{/each}}
+	</tbody>
+</table>
+
+</template>
+
+<template name = "mycollegerow">
+	<tr>
+		<td>{{collegename}}</td>
+		<td>{{ea}}</td>
+		<td>{{rd}}</td>
+	</tr>
+</template>
